fix(crop modal): make notifications visible in modals; resort crop menu

--- a/frontend/src/components/ExpressAnalysisModal.scss
+++ b/frontend/src/components/ExpressAnalysisModal.scss
@@ -2,7 +2,7 @@
   padding: 1rem 0 1rem 0;
 }
 
-.embedded-map-modal.modal.modal-open.z-9999 {
+.embedded-map-modal.modal.modal-open.z-9000 {
   .modal-box {
     .search-result-container {
       height: 100vh;
